se cambiaron las clases de presentacion :C estaban e jpanel y no jframe